# ctd

./: .travis.yml  CMakeLists.txt  README.md
include/ctd/: functional.hpp  memory.hpp  type_traits.hpp  utility.hpp
include/ctd/ext/: ignore_unused.hpp  noncopyable.hpp
include/ctd/functional/: reference_wrapper.hpp
include/ctd/memory/: addressof.hpp
include/ctd/type_traits/: enable_if.hpp  integral_constant.hpp  is_reference.hpp  is_same.hpp  remove_reference.hpp
include/ctd/utility/: move_forward.hpp
test/: CMakeLists.txt
test/ext/: CMakeLists.txt  ignore_unused_test.cpp  noncopyable_test.cpp
test/functional/: CMakeLists.txt  reference_wrapper_test.cpp
test/memory/: CMakeLists.txt  addressof_test.cpp
test/type_traits/: CMakeLists.txt  integral_constant_test.cpp  is_reference_test.cpp  is_same_test.cpp  remove_reference_test.cpp
test/utility/: CMakeLists.txt  move_forward_test.cpp
